--- a/index.html
+++ b/index.html
@@ -26,39 +26,52 @@
     <div id="content">
 
       <div id="main"> <!-- ===========  메인 ==============  -->
-          <h2>당근 농장의 하루를 소개합니다</h2>
+          <h2> 대한민국 축구 국가대표팀 황희찬 선수를 소개합니다</h2>
 
           <p class="postdate"> <!-- ===========  타임 ==============  -->
             <span class="time" > 2023년 12월 19일 오후 1시 13분  </span>
           </p>
           <p class="eyecatch">
-            <img src="images/eyecatch.png" >
+            <img src="images/황희찬.jpg" >
           </p>
 
           <div class="section">  <!-- ===========  세션 ==============  -->
-            <h3>6:00~ 당근 수확과 아침 식사</h3>
-            <p>아침에는 6시쯤 일어납니다. 언제까지나 이불 속에 파묻혀 있고 싶지만, 영차! 하고 힘내서 일어납니다.<br>밖에 나가면 먼저 해님에게 '안녕, 좋은 아침이에요.'라고 인사.</p>
+            <h3>1. 개요</h3>
             <p>
-              그다음 잘 여문 당근을 수확합니다.<br>
-              못난이 당근은 제가 아침밥으로 먹습니다.<br>
-              수확을 하면서 아침도 해결할 수 있어서 무척 효율적입니다!<br>
+              대한민국 국적의 울버햄튼 원더러스 FC 소속 축구 선수. 주 포지션은 윙어.<br/><br/>
+              차범근, 박주영, 손흥민, 권창훈, 황의조에 이어 대한민국 축구 역사상 유럽 5대 리그에서 한 시즌에 10골 이상을 기록한 6번째 선수다. 더불어 EPL에서 대한민국을 넘어 아시아 축구 역사상 손흥민에 이어 리그 두자릿 수 득점을 기록한 2번째 선수이기도 하다.
             </p>
-            <img src="images/carrots.png">
           </div>   
 
           <div class="section">  <!-- ===========  세션 ==============  -->
-            <h3>8:30~12:30 슈퍼마켓이나 휴게소로 출하</h3>
-            <p>아침에 캔 당근을 산지 직송 매장으로 운반합니다. 일과 중 가장 힘을 써야 하는 일이네요.<br>슬슬 리어카가 아니라 전기로 움직이는 차를 구입해볼까 생각하고 있어요.</p>
+            <h3>2. 프로 데뷔 이전</h3>
+            <p>
+              신곡초등학교 재학 시절인 2008년 동원컵 왕중왕전 우승을 이끌며 득점왕에 올랐고, 같은 해 화랑대기 대회에서 팀은 준우승에 머물렀으나, 19골을 넣으며 역대 최다 기록으로 최고 득점상을 수상하였다. 또한 호주에서 열린 캉카컵 세계 유소년 축구대회에서도 22골을 넣는 활약으로 최고 득점상을 차지하였다. 이러한 활약을 바탕으로 제21회 차범근축구상 대상을 수상하는 영예를 안았다.
+              <br/><br/>
+              이후 포항 스틸러스 U-15 유소년 팀인 포항제철중학교에 진학하여 2011년 전국 중등 축구리그 권역 우승과 왕중왕전 우승을 이끌었으며, 같은 해 대한축구협회 중등부 최우수선수상을 수상하였다.
+              <br/><br/>
+              포항제철고등학교 재학 중인 2013년에는 이광혁과 최고의 호흡을 보였다. 2학년임에도 불구하고 팀의 주축으로 활약하며 K리그 아디다스 올인 챌린지리그 정규리그 우승과 왕중왕전을 이끌었다. 정규리그에서는 2학년임에도 대회 베스트 11에 선정되었으며, 왕중왕전에서는 6경기 10골을 기록하며 대회 득점왕과 MVP를 수상하였다.[23] 이후 2014년에는 나상호와 득점왕 경쟁을 벌이면서 포철고의 4관왕을 이끌었다.
+              <br/><br/>
+              2015년 K리그 클래식 포항 스틸러스 입단이 예정되어 있었으나, 후술할 이적 논란이 일어난 후 2014년 12월 오스트리아의 FC 레드불 잘츠부르크에 입단하였다.
+            </p>
           </div>
 
           <div class="section">  <!-- ===========  세션 ==============  -->
-            <h3>12:30~18:00 밭일과 저녁 식사</h3>
-            <p>당근의 상태를 보면서 물을 주거나, 벌레를 잡거나, 비닐을 씌우거나 합니다.<br>지금은 당근이 메인이지만, 장기적으로는 더 많은 작물을 키우고 싶어서 관련 준비도 같이 하고 있습니다.</p>
+            <h3>3. 대회 기록 </h3>
+            <p>
+              FC 레드불 잘츠부르크 (2015~2020) <br/>
+              오스트리아 분데스리가: 2016-17, 2017-18, 2019-20 <br/>
+              ÖFB 쿠프: 2016-17, 2019-20 <br/>
+              대한민국 U-23 축구 국가대표팀 <br/>
+              아시안 게임 금메달: 2018 <br/>
+            </p>
           </div>
 
           <div class="section">  <!-- ===========  세션 ==============  -->
-            <h3>18:30~ 목욕과 취침</h3>
-            <p>느긋하게 목욕을 하고 잠자리에 듭니다. 이불 속은 천국입니다.</p>
+            <h3>4. 응원가(He's Korean) </h3>
+            <p>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/KMsAxdzgQsc?si=GCdTMLpX-ioCA4-m&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </p>
           </div>
       </div>  <!-- ===========  메인 ==============  -->
 
@@ -67,30 +80,25 @@
         <div class="categoryNav"> <!-- ===========  내비 ==============   -->
           <h2>Category</h2>
           <ul>
-            <li><a href="#">농가의 일상(4)</a></li>
-            <li><a href="#">채소 재배 노하우(5)</a></li>
-            <li><a href="#">카피조우 레시피(2)</a></li>
-            <li><a href="#">농장 경영(2)</a></li>
+            <li><a href="#">황희찬 일상(4)</a></li>
+            <li><a href="#">황희찬 축구 노하우(5)</a></li>
+            <li><a href="#">황희찬 일대기</a></li>
+            <li><a href="#">황희찬 경력</a></li>
           </ul>
         </div> <!-- ===========  내비 ==============   -->
         <div class="recentNav">  <!-- ===========  내비 ==============   -->
           <h2>Recent Articles</h2>
           <ul>
-            <li><a href="#">온실 재배 주의할 점 TOP10</a></li>
-            <li><a href="#">현역 농부가 해충 퇴치법을 알려드립니다</a></li>
-            <li><a href="#">집에서도 가능! 화분 재배의 핵심</a></li>
-            <li><a href="#">간단하게 만드는 당근 요리 소개!</a></li>
-            <li><a href="#">농사지어서 먹고살 수 있을까? 제일 궁금해하는 연 수입 대공개</a></li>
-            <li><a href="#">안녕하세요. FARM CAPYZOU입니다.</a></li>
+            <li><a href="#">EPL 선수 연봉 TOP10</a></li>
+            <li><a href="#">대한민국 스쿼드</a></li>
+            <li><a href="#">새로운 대한민국 국가대표 감독 선임</a></li>
+            <li><a href="#">FA컵 16강전, 공 다투는 황희찬</a></li>
+            <li><a href="#">‘EPL 골 결정력’ 황희찬 1위 - 손흥민 3위</a></li>
+            <li><a href="#">햄스트링 다친 황희찬, 6주 이탈…월드컵 예선 태국전 못 뛸듯</a></li>
           </ul>
         </div> <!-- ===========  내비 ==============   -->
-        <p>
-          <a href="#"><img src="images/side_banner.png" alt="온라인 샵 배너"></a>
-        </p>
       </div> <!-- ===========  사이드바 ==============   -->
-
     </div>
-
 
     <div id="footer">  <!-- ===========  푸터 ==============   -->
         <small>© 2024 EZEN WEB PAGE </small>
