--- a/index.html
+++ b/index.html
@@ -57,13 +57,25 @@
           </div>
 
           <div class="section">  <!-- ===========  세션 ==============  -->
-            <h3>3. 대회 기록 </h3>
+            <h3>3. 개인수상 </h3>
             <p>
-              FC 레드불 잘츠부르크 (2015~2020) <br/>
-              오스트리아 분데스리가: 2016-17, 2017-18, 2019-20 <br/>
-              ÖFB 쿠프: 2016-17, 2019-20 <br/>
-              대한민국 U-23 축구 국가대표팀 <br/>
-              아시안 게임 금메달: 2018 <br/>
+              화랑대기 전국 초등학교 축구대회 득점왕: 2008 <br/>
+              오스트레일리아 캉카컵 세계 유소년 축구대회 득점왕: 2008 <br/>
+              동원컵 전국 유소년축구리그 득점왕: 2008 <br/>
+              제21회 차범근 축구상 대상: 2009 <br/>
+              대한축구협회 남자 중등부 MVP: 2011 <br/>
+              아시아축구연맹(AFC) U-16 챔피언십 득점왕: 2012 <br/>
+              제46회 대통령금배 전국고교축구대회 득점왕: 2013 <br/>
+              K리그 U-18 챌린지리그 베스트 XI 공격수 부문: 2013 <br/>
+              전국 초중고 축구리그 고등부 왕중왕전 득점왕: 2013 <br/>
+              전국 초중고 축구리그 고등부 왕중왕전 MVP: 2013 <br/>
+              대한축구협회 남자 고등부 MVP: 2013 <br/>
+              문화체육부장관기 전국고교 축구대회 득점왕: 2014 <br/>
+              아디다스 올인 K리그 주니어 시즌 베스트 XI: 2014 <br/>
+              AFC 선정 U-23 챔피언십 출신 최고의 스타: 2019 <br/>
+              울버햄튼 원더러스 FC 이달의 선수: 2023년 10월 <br/>
+              울버햄튼 원더러스 FC 팬 선정 이달의 선수: 2021년 10월 <br/>
+              FIFA 월드컵 맨 오브 더 매치: 2022 FIFA 월드컵 카타르 조별리그 3차전 (vs 포르투갈)
             </p>
           </div>
 
