--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1><img src="images/logo.png" ></h1>
       <!-- ===========  내비 ==============   -->
       <ul>
-        <li><a href="#">HOME</a></li>
+        <li><a href="/finalpage">HOME</a></li>
         <li><a href="#">SCHEDULE</a></li>
         <li><a href="#">BLOG</a></li>
         <li><a href="#">SHOP</a></li>
