--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>EZEN WEB PAGE </title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='/finalpage/css/style.css'>
 </head>
 
   <body>
@@ -14,7 +14,7 @@
       <h1><img src="images/logo.png" ></h1>
       <!-- ===========  내비 ==============   -->
       <ul>
-        <li><a href="/">HOME</a></li>
+        <li><a href="/finalpage">HOME</a></li>
         <li><a href="/finalpage/calender.html">SCHEDULE</a></li>
         <li><a href="#">BLOG</a></li>
         <li><a href="#">SHOP</a></li>
